--- a/public/styles.css
+++ b/public/styles.css
@@ -16,3 +16,22 @@ p.greeting {
   padding-bottom: 150px;
   font-size: 2.5vw;
 }
+
+.d-block {
+  height: 500px;
+}
+
+.about-text, .jane {
+  padding-left: 10%;
+  padding-right: 10%;
+  text-align: justify;
+}
+
+.jane {
+  font-family: "JaneAusten", sans-serif;
+  color: #B91646;
+}
+
+.about-text {
+  font-family: "Enigmatic", sans-serif;
+}
