--- a/public/styles.css
+++ b/public/styles.css
@@ -1,10 +1,16 @@
-.nav-link {
-  color: red;
-}
-
 .greeting {
+  color: #105652;
   font-family: "Cumulus", sans-serif;
   text-align: center;
+}
+
+.github{
+  color: #105652;
+  text-align: center;
+}
+
+.github:hover {
+  color: #B91646;
 }
 
 h1.greeting {
@@ -13,8 +19,11 @@ h1.greeting {
 }
 
 p.greeting {
-  padding-bottom: 150px;
   font-size: 2.5vw;
+}
+
+.greeting h3 {
+  padding-bottom: 150px;
 }
 
 .d-block {
@@ -30,8 +39,77 @@ p.greeting {
 .jane {
   font-family: "JaneAusten", sans-serif;
   color: #B91646;
+  text-shadow: 2px 1px grey;
 }
 
 .about-text {
+  color: #FBF3E4;
   font-family: "Enigmatic", sans-serif;
+}
+
+#programming {
+  padding-top: 10%;
+  padding-bottom: 10%;
+}
+
+.card-title, .card-text {
+  color: #FBF3E4;
+  font-family: "Enigmatic", sans-serif;
+}
+
+.card-title {
+  text-decoration: underline;
+}
+
+.cb1 {
+  background-color: #C7456B;
+}
+
+.cb2 {
+  background-color: #B91646;
+  text-align: center;
+}
+
+.cb3 {
+  background-color: #820F31;
+  text-align: right;
+}
+
+#music h4, #music h3 {
+  text-align: center;
+}
+
+#music h1, #bio h1 {
+  padding-top: 5%;
+  font-family: "Enigmatic", sans-serif;
+  text-align: center;
+}
+
+.bio {
+  font-family: "Enigmatic", sans-serif;
+  padding-left: 10%;
+  padding-right: 10%;
+  text-align: justify;
+}
+
+#music a {
+  color: #FBF3E4;
+  font-family: "Enigmatic", sans-serif;
+  text-decoration: none;
+}
+
+#music a:hover {
+  color: #B91646;
+}
+
+body {
+  background: linear-gradient(#FBF3E4, #105652);
+}
+
+html, body {
+    width: 100%;
+    height: auto;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
